// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi point mode in linear elements arrow 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "bounds": Array [
    28.800506480410696,
    29.248315904662014,
    100.04748054333031,
    141.21578015631064,
  ],
  "endArrowhead": "arrow",
  "endBinding": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": Array [
    70,
    110,
  ],
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      20,
      30,
    ],
    Array [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "roundness": Object {
    "type": 2,
  },
  "seed": 337897,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#000000",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "arrow",
  "updated": 1,
  "version": 7,
  "versionNonce": 1150084233,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;

exports[`multi point mode in linear elements line 1`] = `
Object {
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "bounds": Array [
    28.800506480410696,
    29.248315904662014,
    100.04748054333031,
    141.21578015631064,
  ],
  "endArrowhead": null,
  "endBinding": null,
  "fillStyle": "hachure",
  "groupIds": Array [],
  "height": 110,
  "id": "id0",
  "isDeleted": false,
  "lastCommittedPoint": Array [
    70,
    110,
  ],
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": Array [
    Array [
      0,
      0,
    ],
    Array [
      20,
      30,
    ],
    Array [
      70,
      110,
    ],
  ],
  "roughness": 1,
  "roundness": Object {
    "type": 2,
  },
  "seed": 337897,
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#000000",
  "strokeStyle": "solid",
  "strokeWidth": 1,
  "type": "line",
  "updated": 1,
  "version": 7,
  "versionNonce": 1150084233,
  "width": 70,
  "x": 30,
  "y": 30,
}
`;
